Add password modification feature

--- a/static/style.css
+++ b/static/style.css
@@ -7,8 +7,9 @@ a {
 }
 
 label {
-	color: #606770;
-	font-weight: 600;
+	color: #6d747c;
+	font-weight: 500;
+	padding-bottom: 3px;
 }
 
 /* Navigation */
@@ -178,7 +179,7 @@ main {
 	visibility: hidden;
 	min-width: 250px;
 	margin-left: -125px;
-	background-color: rgba(186, 185, 185, 0.681);
+	background-color: rgba(168, 168, 168, 0.885);
 	color: #fff;
 	text-align: center;
 	padding: 16px;
@@ -186,7 +187,7 @@ main {
 	z-index: 1;
 	left: 50%;
 	top: 30px;
-	border: 1px solid #ebe9e924;
+	border: 1px solid #ebe9e93e;
 	border-radius: 8px;
 }
 
@@ -194,8 +195,8 @@ main {
 	visibility: visible;
 	/* Add animation: Take 0.5 seconds to fade in and out the snackbar.
 	However, delay the fade out process for 2.5 seconds */
-	-webkit-animation: fadein 0.5s, fadeout 0.5s 2s;
-	animation: fadein 0.5s, fadeout 0.5s 2s;
+	-webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+	animation: fadein 0.5s, fadeout 0.5s 2.5s;
 }
 
 /* Animations to fade the snackbar in and out */
@@ -251,7 +252,7 @@ main {
 
 .form-wrapper {
 	min-height: 100%;
-	margin: 1rem 0;
+	margin: 1erm 0;
 }
 
 .form-container {
