--- a/static/style.css
+++ b/static/style.css
@@ -310,6 +310,51 @@ main {
 	text-align: center;
 }
 
+/* File upload */
+
+.upload-form-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	max-width: 600px;
+	border-radius: 10px;
+	background-color: #f8f9fa;
+	box-shadow: 3px 3px 8px #e6e6e6;
+	margin: 1.5rem auto;
+	border: 1px solid #dddddd80;
+}
+
+.upload-form {
+	display: flex;
+}
+
+input[type="file"] {
+	display: none;
+}
+
+.custom-file-upload {
+	border: 1px solid #ccc;
+	cursor: pointer;
+	padding: 5px 10px;
+	width: 420px;
+	margin: 10px 0px 10px 10px;
+	border-radius: 0.375rem;
+	font-weight: 400;
+	height: 35px;
+}
+
+#file-selected {
+	color: #262626;
+	padding-left: 5px;
+}
+
+#upload-btn {
+	width: 83px;
+	height: 35px;
+	padding: 4px;
+	margin: 10px;
+}
+
 /* Login */
 
 .separator {
