Small changes to frontend, fix to require_login function

--- a/static/style.css
+++ b/static/style.css
@@ -332,10 +332,12 @@ main {
 	overflow-x: scroll;
 }
 
+.selected.sticker {
+	opacity: 0.5;
+}
 
 .sticker {
 	margin: 10px;
-	opacity: 1;
 }
 
 .sticker:hover {
